2005-05-23  Titus Brown  <t@issola.caltech.edu>

	* Fixed problem with spaces in links/URLs.
